# SCA-Fuzz

./: extract.py  readme
AFLplusplus-4.21c/: GNUmakefile  GNUmakefile.llvm
AFLplusplus-4.21c/custom_mutators/sca/: Makefile  exec_server.c  sca_mutator.cpp
AFLplusplus-4.21c/src/: afl-cc.c
libdft_ECT/: Makefile  README.md
libdft_ECT/src/: libdft_api.h  libdft_core.cpp  ssa_tag.h  ssa_tag_gc.cpp
libdft_ECT/sylvan/src/: CMakeLists.txt
libdft_ECT/tools/: extract.cpp  makefile.rules
